123-AG Fixed spacing/alignment

--- a/src/pages/DashboardPage/DashboardHome/DashboardHome.scss
+++ b/src/pages/DashboardPage/DashboardHome/DashboardHome.scss
@@ -8,7 +8,8 @@ body{
 .welcome {
     display: flex; 
     justify-content: flex-start;
-    margin: 50px 0px 30px 0px;
+    margin: 50px 0px 30px 150px;
+    width: 100%;
 }
 .container{
     margin: 20px 20px;
@@ -19,8 +20,8 @@ body{
 
 }
 .post-container {
-    width: 75%;
-    padding: 10px 10px;
+    width: 85%;
+    padding: 20px 20px;
     margin-top: 10px;
     background-color: white;
     box-shadow: 0px 0.2rem 0.2rem 0px rgba(0, 0, 0, 0.25);
@@ -34,21 +35,26 @@ body{
 
 .icon-heading {
     display: flex;
+    width: 100%;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .profile-image {
     width: 50px;
     height: 50px;
     border-radius: 10px;
-    border: 1px solid $MVP-black;
+    border: 3px solid $MVP-black;
+    img {
+        object-fit: contain;
+    }
 }
 
 .heading {
     display: flex;
     flex-direction: column;
+    margin-left: 20px;
 }
 
 .name{
@@ -61,6 +67,7 @@ body{
     flex-direction: row;
     img {
         width: 10px;
+        margin-right: 3px
     }
     font-size: 10px;
 }
